--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_fortune_wheel: ^1.3.2
+  rxdart: ^0.28.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +48,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -87,3 +91,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon_home.png"
+  min_sdk_android: 21 # android min sdk version
+  # 如果要支援 Android 的適應性圖示 (Adaptive Icon)，可以另外設定背景與前景
+  # adaptive_icon_background: "#ffffff"
+  # adaptive_icon_foreground: "assets/images/icon_foreground.png"
